zk badge size: fixed badge size on mobile #99

--- a/components/GameField/GameField.module.scss
+++ b/components/GameField/GameField.module.scss
@@ -250,6 +250,12 @@
                 width: 55px;
                 height: 55px;
               }
+
+              @media (max-width: 768px) {
+                margin: 5px;
+                width: 50px;
+                height: 50px;
+              }
             }
 
             &.available {
